# antimoodlo-api/Models/Quiz.go
@@ -2,6 +2,7 @@ package Models
 
 import "time"
 
+// --- Тип вопроса ---
 type QuestionType struct {
 	ID   uint   `gorm:"primaryKey;column:id" json:"id"`
 	Name string `gorm:"column:name" json:"name"`
@@ -11,6 +12,7 @@ func (QuestionType) TableName() string {
 	return "questiontypes"
 }
 
+// --- Тест (Quiz) ---
 type Quiz struct {
 	ID           uint       `gorm:"primaryKey;column:id" json:"id"`
 	Title        string     `gorm:"column:title" json:"title"`
@@ -18,36 +20,39 @@ type Quiz struct {
 	Duration     int        `gorm:"column:duration" json:"duration"`
 	StateID      uint       `gorm:"column:stateid" json:"stateid"`
 	StartDate    time.Time  `gorm:"column:startdate" json:"startdate"`
-	EndDate      time.Time  `gorm:"column:end_date" json:"end_date"`
+	EndDate      time.Time  `gorm:"column:enddate" json:"enddate"`
 	SubmitedDate *time.Time `gorm:"column:submiteddate" json:"submiteddate,omitempty"`
-	CourseID     uint       `gorm:"column:course_id" json:"course_id"`
+	CourseID     uint       `gorm:"column:courseid" json:"courseid"`
 }
 
 func (Quiz) TableName() string {
 	return "quizzes"
 }
 
+// --- Вопрос ---
 type Question struct {
 	ID             uint   `gorm:"primaryKey;column:id" json:"id"`
 	QuizID         uint   `gorm:"column:quizid" json:"quizid"`
 	QuestionText   string `gorm:"column:questiontext" json:"questiontext"`
-	QuestionTypeID uint   `gorm:"column:question_typeid" json:"question_typeid"`
+	QuestionTypeID uint   `gorm:"column:questiontypeid" json:"questiontypeid"`
 }
 
 func (Question) TableName() string {
 	return "questions"
 }
 
+// --- Варианты ответа ---
 type QuestionOption struct {
 	ID         uint   `gorm:"primaryKey;column:id" json:"id"`
-	QuestionID uint   `gorm:"column:question_id" json:"question_id"`
-	OptionText string `gorm:"column:option_text" json:"option_text"`
+	QuestionID uint   `gorm:"column:questionid" json:"questionid"`
+	OptionText string `gorm:"column:optiontext" json:"optiontext"`
 }
 
 func (QuestionOption) TableName() string {
 	return "questionoptions"
 }
 
+// --- Правильный ответ ---
 type CorrectAnswer struct {
 	ID         uint `gorm:"primaryKey;column:id" json:"id"`
 	QuestionID uint `gorm:"column:questionid" json:"questionid"`
@@ -58,6 +63,7 @@ func (CorrectAnswer) TableName() string {
 	return "correctanswers"
 }
 
+// --- Открытый ответ ---
 type OpenAnswer struct {
 	QuestionID uint   `gorm:"primaryKey;column:questionid" json:"questionid"`
 	AnswerText string `gorm:"column:answertext" json:"answertext"`
@@ -67,6 +73,7 @@ func (OpenAnswer) TableName() string {
 	return "openanswers"
 }
 
+// --- Сопоставление пар ---
 type MatchPair struct {
 	ID         uint   `gorm:"primaryKey;column:id" json:"id"`
 	QuestionID uint   `gorm:"column:questionid" json:"questionid"`
